<resources>
    <string name="app_name">BodyArt Mobile</string>
    <string name="email">Email</string>
    <string name="pswd">Senha</string>
    <string name="fgt_pswd">Esqueci minha senha</string>
    <string name="btn_login">Fazer login</string>
    <string name="register">Registrar-se</string>
    <string name="back">Voltar</string>
    <string name="cadastro">Cadastro</string>
    <string name="info_data">Informe os dados:</string>
    <string name="name">Nome</string>
    <string name="number">(XX)X XXXX-XXXX</string>
    <string name="continuar">Continuar</string>
    <string name="possui_conta">Já possui uma conta?</string>
    <string name="init_session">Iniciar sessão</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="outro">Outro</string>
    <string name="dt_nasc">Data de nascimento</string>
    <string name="dia">Dia</string>
    <string name="ano">Ano</string>
    <string name="mes">Mês</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="redef_senha">Redefinir Senha</string>
    <string name="msg_redef">Por favor informe o E-mail associado a sua conta que enviaremos um link para o mesmo com as instruções para restauração da sua senha</string>
    <string name="txt_email_redef">Enviar e-mail de redefinição</string>
    <string name="ler_termos">termos de uso</string>
    <string name="txt_confirmacao">Li e aceito os</string>
    <string name="agenda">Agenda</string>
    <string name="home">Home</string>
    <string name="config">Configurações</string>
    <string name="geolocalizacao">Geolocalização</string>
    <string name="feed">Feed</string>
    <string name="name_profissional">Nome aqui</string>
    <string name="tv_servicos">Serviços</string>
    <string name="tv_perto">Perto de mim</string>
    <string name="error_cadastro_msg">Preencha todos os campos para continuar</string>
    <string name="et_nascimento">DD/MM/AAAA</string>
    <string name="et_vazio">Campo obrigatório</string>
    <string name="msg_boas_vindas">Bem vindo(a) %1s</string>
    <string name="msg_erro_api">Erro ao se conectar</string>
    <string name="msg_erro_login">Login e/ou senha inválidos</string>
    <string name="msg_cadastro_realizado">Cadastro realizado com sucesso!</string>
    <string name="msg_cadastro_nao_realizado">Erro ao se cadastrar</string>
    <string name="nome_profissional">Rogério Flores</string>
    <string name="avaliacao">5.00</string>
    <string name="agendar">Agendar</string>
    <string name="atendimentos">Atendimentos</string>
    <string name="nome_servico">Tatuagem</string>
    <string name="atendimentos_qtd">254</string>
    <string name="tv_todos">Todos</string>
    <string name="tv_ver_todos">Ver todos</string>
    <string name="tv_avaliacao">Avaliação</string>
    <string name="tv_a_z">A-Z</string>
    <string name="tv_categoria">Categoria</string>
    <string name="tv_estabelecimento">Estabelecimento</string>
    <string name="tv_nome">Nome do estabelecimento</string>
    <string name="btn_open">Abrir</string>
    <string name="btn_see_more">Saiba mais</string>
    <string name="meus_agendamentos">Meus agendamentos</string>
    <string name="et_nota">0.0</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_confirmar_senha">Confirmar Senha</string>
    <string name="nova_senha">Digite sua nova senha</string>
    <string name="confirmar_nova_senha">Digite novamente</string>

    <string name="tv_nota">5.0</string>
    <string name="tv_agenda">Minha agenda</string>
    <string name="tv_feed">Feed</string>
    <string name="tv_inicio">Ínicio</string>
    <string name="tv_perfil">Perfil</string>
    <string name="tv_bemvindo">Bem vindo usuário</string>
    <string name="pramim"><![CDATA[O BodyArt é a solução perfeita para você agendar clientes, utilizar o marketing, gerenciar sua empresa e se comunicar com o seu público. Além disso, é um lugar para os clientes se conectarem aos serviços e descobrirem novas empresas do mercado.]]></string>
    <string name="recursos"><![CDATA[Calendário: Melhoramos o calendário para ajudar você a ser mais eficiente e passar de um compromisso ao outro. Não é necessário memorizar seu calendário ou seus intervalos. Agora, quando você criar ou editar um agendamento, ele abrirá ao lado do seu calendário - para que você possa ver tudo sem se perder. Checkout: O processo de checkout está mais fácil do que nunca com o novo recurso de Venda Rápida. Lite - Aceite várias opções de pagamento e envie recibos, tudo na palma da sua mão Pro - Acesse seus produtos e serviços mais populares sem ter que clicar em vários menus.]]></string>
    <string name="funciona">Em sua essência, o Booksy é um aplicativo de agendamento, mas ele é muito mais do que só agendar horários. É uma plataforma que ajuda você a administrar sua empresa, do seu jeito. Quando você se inscreve no Booksy, você começa a se beneficiar com o seguinte: - Booksy Biz: Escolha a solução que melhor se adapta às suas necessidades.- Booksy Biz Lite: Solução simples e</string>

    <string name="agendado_sucesso">Agendado com sucesso!</string>
    <string name="agendado_erro">Erro ao agendar!</string>

</resources>