<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_primary">
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/back"
            android:textColor="@color/african_violet"
            android:textSize="25sp"
            android:layout_alignStart="@+id/rg_buttons"
            />
        <TextView
            android:id="@+id/tv_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_back"
            android:layout_marginTop="20dp"
            android:text="@string/cadastro"
            android:textColor="@color/white_smoke"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_alignStart="@+id/tv_back"/>
        <TextView
            android:id="@+id/tv_sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/sexo"
            android:textColor="@color/african_violet"
            android:textSize="25sp"
            android:layout_below="@+id/tv_cadastro"
            android:layout_alignStart="@+id/tv_back"/>
       <RadioGroup
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_centerHorizontal="true"
           android:id="@+id/rg_buttons"
           android:layout_below="@+id/tv_sexo"
           android:layout_marginTop="20dp">
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/masculino"
               android:textColor="@color/white_smoke"
               android:textSize="20sp"/>
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/feminino"
               android:textColor="@color/white_smoke"
               android:textSize="20sp"/>
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/outro"
               android:textColor="@color/white_smoke"
               android:textSize="20sp"/>
       </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dt_nasc"
            android:text="@string/dt_nasc"
            android:layout_below="@id/rg_buttons"
            android:layout_alignStart="@id/rg_buttons"
            android:textColor="@color/white_smoke"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_dt_nasc"
            android:layout_alignStart="@id/rg_buttons"
            android:id="@+id/ll_dt_nasc"
            android:layout_marginTop="20dp">
            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/dia"
                android:background="@color/white_smoke"
                android:paddingVertical="6dp"
                android:paddingHorizontal="5dp"
                />
            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/mes"
                android:background="@color/white_smoke"
                android:paddingVertical="6dp"
                android:paddingHorizontal="5dp"
                android:layout_marginLeft="20dp"
                />
            <EditText
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/ano"
            android:background="@color/white_smoke"
            android:paddingVertical="6dp"
                android:paddingHorizontal="5dp"
                android:layout_marginLeft="20dp"
            />

        </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_confirmacao"
            android:textColor="@color/white_smoke"
            android:layout_below="@+id/ll_dt_nasc"
            android:layout_marginTop="100dp"
            android:id="@+id/cb_confirmacao"
            android:layout_alignStart="@+id/btn_cadastrar"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_dt_nasc"
            android:layout_alignBaseline="@id/cb_confirmacao"
            android:layout_marginLeft="175dp"
            android:text="@string/ler_termos"
            android:textColor="@color/african_violet"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_dt_nasc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/lapis_lazuli"
            android:text="@string/cadastrar"
            android:textSize="20sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>