<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_primary"
        tools:layout_editor_absoluteX="-52dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_name"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/back"
            android:textColor="@color/african_violet"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_back"
            android:layout_alignStart="@+id/et_name"
            android:layout_marginTop="20dp"
            android:text="@string/cadastro"
            android:textColor="@color/white_smoke"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_info_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_cadastro"
            android:layout_alignStart="@+id/et_name"
            android:layout_marginTop="60dp"
            android:text="@string/info_data"
            android:textColor="@color/white_smoke"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_info_data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/white_smoke"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="5dp"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/et_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@color/white_smoke"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_pswd"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/et_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@color/white_smoke"
            android:hint="@string/pswd"
            android:inputType="textPassword|textVisiblePassword"
            android:padding="5dp"
            android:textColorHint="@color/gray" />


        <EditText
            android:id="@+id/et_number"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/et_pswd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/white_smoke"
            android:hint="@string/number"
            android:inputType="phone"
            android:padding="5dp"
            android:textColorHint="@color/gray" />

        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:backgroundTint="@color/lapis_lazuli"
            android:onClick="continuar"
            android:text="@string/continuar"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_init_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_continuar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/possui_conta"
                android:textColor="@color/white_smoke" />

            <TextView
                android:id="@+id/tv_iniciar_sessao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/init_session"
                android:textColor="@color/african_violet" />

        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>